mechanization-manager-app/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mechanization-manager-app
  namespace: wms-proto
spec:
  selector:
    app: mechanization-manager-app
  ports:
    - port: 8080
      targetPort: 8080
