mechanization-manager-app/base/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mechanization-manager-zookeeper
  namespace: wms-proto
spec:
  selector:
    app: mechanization-manager-zookeeper
  ports:
    - port: 2181
      targetPort: 2181
